Ensure JAX manifest upload uses retrieve_bucket_info-based path resolution

--- a/.github/workflows/build_linux_jax_wheels.yml
+++ b/.github/workflows/build_linux_jax_wheels.yml
@@ -122,6 +122,7 @@ jobs:
     env:
       PACKAGE_DIST_DIR: ${{ github.workspace }}/jax/jax_rocm_plugin/wheelhouse
       S3_BUCKET_PY: "therock-${{ inputs.release_type }}-python"
+      RELEASE_TYPE: ${{ inputs.release_type }}
     outputs:
       cp_version: ${{ env.cp_version }}
       jax_version: ${{ steps.write_jax_versions.outputs.jax_version }}
@@ -173,10 +174,9 @@ jobs:
           python3 build_tools/github_actions/generate_jax_manifest.py \
             --manifest-dir "${{ env.PACKAGE_DIST_DIR }}/manifests" \
             --python-version "${{ inputs.python_version }}" \
-            --jax-track "${{ inputs.jax_ref }}" \
-            --jax-git-ref "${{ inputs.jax_ref }}" \
+            --jax-track "${{ matrix.jax_ref }}" \
+            --jax-git-ref "${{ matrix.jax_ref }}" \
             --jax-dir "${{ github.workspace }}/jax"
-          ls -lah "${{ env.PACKAGE_DIST_DIR }}/manifests"
 
       - name: Extract JAX versions from built wheels
         id: write_jax_versions
@@ -195,18 +195,22 @@ jobs:
           aws-region: us-east-2
           role-to-assume: arn:aws:iam::692859939525:role/therock-${{ inputs.release_type }}
 
-      - name: Upload wheels + manifest to S3
+      - name: Upload wheels to python S3
         if: ${{ github.repository_owner == 'ROCm' }}
         run: |
-          # Wheels
           aws s3 cp "${{ env.PACKAGE_DIST_DIR }}/" \
             "s3://${{ env.S3_BUCKET_PY }}/${{ inputs.s3_staging_subdir }}/${{ inputs.amdgpu_family }}/" \
             --recursive --exclude "*" --include "*.whl"
 
-          # Manifests
-          aws s3 cp "${{ env.PACKAGE_DIST_DIR }}/manifests/" \
-            "s3://${{ env.S3_BUCKET_PY }}/${{ inputs.s3_staging_subdir }}/${{ inputs.amdgpu_family }}/manifests/" \
-            --recursive --exclude "*" --include "*.json"
+      - name: Upload JAX manifest to artifacts S3
+        if: ${{ github.repository_owner == 'ROCm' }}
+        run: |
+          python3 build_tools/github_actions/upload_jax_manifest.py \
+            --dist-dir "${{ env.PACKAGE_DIST_DIR }}" \
+            --run-id "${{ github.run_id }}" \
+            --amdgpu-family "${{ inputs.amdgpu_family }}" \
+            --python-version "${{ inputs.python_version }}" \
+            --jax-track "${{ matrix.jax_ref }}"
 
       - name: (Re-)Generate Python package release index
         if: ${{ github.repository_owner == 'ROCm' }}
