--- a/comm-libs/CMakeLists.txt
+++ b/comm-libs/CMakeLists.txt
@@ -1,5 +1,5 @@
 # TODO(#2632): Re-enable RCCL for sanitizer builds once RCCL build time is acceptable
-if(THEROCK_ENABLE_RCCL AND THEROCK_SANITIZER STREQUAL "")
+if(THEROCK_ENABLE_RCCL)
   # Most libraries need to depend on the profiler, but is conditionally only used
   # on Posix.
   set(optional_profiler_deps)
@@ -89,4 +89,4 @@ if(THEROCK_ENABLE_RCCL AND THEROCK_SANITIZER STREQUAL "")
     SUBPROJECT_DEPS
       ${_rccl_subproject_names}
   )
-endif(THEROCK_ENABLE_RCCL AND THEROCK_SANITIZER STREQUAL "")
+endif(THEROCK_ENABLE_RCCL)
