--- a/build_tools/packaging/linux/package.json
+++ b/build_tools/packaging/linux/package.json
@@ -318,6 +318,50 @@
     "Gfxarch": "False"
   },
   {
+    "Package": "amdrocm-fft-test",
+    "Version": "",
+    "Architecture": "amd64",
+    "BuildArch": "x86_64",
+    "DEBDepends": [
+      "libc6",
+      "amdrocm-runtime",
+      "amdrocm-sysdeps"
+    ],
+    "RPMRequires": [
+      "amdrocm-runtime",
+      "amdrocm-sysdeps"
+    ],
+    "Maintainer": "ROCm Dev Support <rocm-dev.support@amd.com>",
+    "Description_Short": "ROCm FFT library",
+    "Description_Long": "rocfft and hipfft library files",
+    "Section": "devel",
+    "Priority": "optional",
+    "Group": "unknown",
+    "License": "MIT",
+    "Vendor": "Advanced Micro Devices, Inc",
+    "Homepage": "https://github.com/ROCm/rocm-libraries",
+    "Artifactory": [
+      {
+        "Artifact": "fft",
+        "Artifact_Subdir": [
+          {
+            "Name": "rocFFT",
+            "Components": [
+              "test"
+            ]
+          },
+          {
+            "Name": "hipFFT",
+            "Components": [
+              "test"
+            ]
+          }
+        ]
+      }
+    ],
+    "Gfxarch": "True"
+  },
+  {
     "Package": "amdrocm-fft",
     "Version": "",
     "Architecture": "amd64",
@@ -474,6 +518,90 @@
               "lib",
               "run",
               "doc"
+            ]
+          }
+        ]
+      }
+    ],
+    "Gfxarch": "True"
+  },
+  {
+    "Package": "amdrocm-blas-test",
+    "Version": "",
+    "Architecture": "amd64",
+    "BuildArch": "x86_64",
+    "DEBDepends": [
+      "amdrocm-runtime"
+    ],
+    "RPMRequires": [
+      "amdrocm-runtime"
+    ],
+    "Maintainer": "ROCm Dev Support <rocm-dev.support@amd.com>",
+    "Description_Short": "AMD library for BLAS in ROCm",
+    "Description_Long": "BLAS libraries which includes hipBlAS, rocBLAS, hipBLASLt and hipSPARSELt",
+    "Section": "devel",
+    "Priority": "optional",
+    "Group": "unknown",
+    "License": "MIT",
+    "Vendor": "Advanced Micro Devices, Inc",
+    "Homepage": "https://github.com/ROCm/rocm-libraries",
+    "Artifactory": [
+      {
+        "Artifact": "blas",
+        "Artifact_Subdir": [
+          {
+            "Name": "hipBLAS",
+            "Components": [
+              "test"
+            ]
+          },
+          {
+            "Name": "rocBLAS",
+            "Components": [
+              "test"
+            ]
+          },
+          {
+            "Name": "rocRoller",
+            "Components": [
+              "test"
+            ]
+          },
+
+          {
+            "Name": "hipBLASLt",
+            "Components": [
+              "test"
+            ]
+          },
+          {
+            "Name": "hipSPARSELt",
+            "Components": [
+              "test"
+            ]
+          },
+          {
+            "Name": "rocSOLVER",
+            "Components": [
+              "test"
+            ]
+          },
+          {
+            "Name": "hipSOLVER",
+            "Components": [
+              "test"
+            ]
+          },
+          {
+            "Name": "rocSPARSE",
+            "Components": [
+              "test"
+            ]
+          },
+          {
+            "Name": "hipSPARSE",
+            "Components": [
+              "test"
             ]
           }
         ]
@@ -776,6 +904,48 @@
     "Gfxarch": "True"
   },
 
+  {
+    "Package": "amdrocm-rand-test",
+    "Version": "",
+    "Architecture": "amd64",
+    "BuildArch": "x86_64",
+    "DEBDepends": [
+      "libc6",
+      "amdrocm-rand"
+    ],
+    "RPMRequires": [
+      "amdrocm-rand"
+    ],
+    "Maintainer": "ROCm Dev Support <rocm-dev.support@amd.com>",
+    "Description_Short": "ROCm random number generation library",
+    "Description_Long": "Contains rocrand and hiprand developement header files",
+    "Section": "devel",
+    "Priority": "optional",
+    "Group": "unknown",
+    "License": "MIT",
+    "Vendor": "Advanced Micro Devices, Inc",
+    "Homepage": "https://github.com/ROCm/rocm-libraries",
+    "Artifactory": [
+      {
+        "Artifact": "rand",
+        "Artifact_Subdir": [
+          {
+            "Name": "rocRAND",
+            "Components": [
+              "test"
+            ]
+          },
+          {
+            "Name": "hipRAND",
+            "Components": [
+              "test"
+            ]
+          }
+        ]
+      }
+    ],
+    "Gfxarch": "True"
+  },
   {
     "Package": "amdrocm-rand-devel",
     "Version": "",
@@ -1361,6 +1531,46 @@
   },
 
   {
+    "Package": "amdrocm-rccl-test",
+    "Version": "",
+    "Architecture": "amd64",
+    "BuildArch": "x86_64",
+    "DEBDepends": [
+      "libc6",
+      "amdrocm-base",
+      "amdrocm-profiler-base"
+    ],
+    "RPMRequires": [
+      "amdrocm-base",
+      "amdrocm-profiler-base"
+    ],
+    "Maintainer": "RCCL Maintainer <rccl-maintainer@amd.com>",
+    "Description_Short": "ROCm Communication Collectives Library. Optimized primitives for collective multi-GPU communication",
+    "Description_Long": "ROCm Communication Collectives Library. Optimized primitives for collective multi-GPU communication",
+    "Section": "devel",
+    "Priority": "optional",
+    "Group": "unknown",
+    "License": "MIT",
+    "Vendor": "Advanced Micro Devices, Inc",
+    "Homepage": "https://github.com/ROCm/rccl",
+    "Artifactory": [
+      {
+        "Artifact": "rccl",
+        "Artifact_Subdir": [
+          {
+            "Name": "rccl",
+            "Components": [
+              "test"
+            ]
+          }
+        ]
+      }
+    ],
+
+    "Gfxarch": "True"
+  },
+
+  {
     "Package": "amdrocm-rccl",
     "Version": "",
     "Architecture": "amd64",
@@ -1441,6 +1651,7 @@
 
     "Gfxarch": "True"
   },
+
   {
     "Package": "amdrocm-dnn",
     "Version": "",
@@ -1493,6 +1704,54 @@
       }
     ],
 
+    "Gfxarch": "True"
+  },
+
+  {
+    "Package": "amdrocm-dnn-test",
+    "Version": "",
+    "Architecture": "amd64",
+    "BuildArch": "x86_64",
+    "DEBDepends": [
+      "amdrocm-dnn"
+    ],
+    "RPMRequires": [
+      "amdrocm-dnn"
+    ],
+    "Maintainer": "MIOpen Maintainer <miopen-lib.support@amd.com>",
+    "Description_Short": "AMD DNN Library",
+    "Description_Long": "Provides development files for miopen library",
+    "Section": "devel",
+    "Priority": "optional",
+    "Group": "unknown",
+    "License": "MIT",
+    "Vendor": "Advanced Micro Devices, Inc",
+    "Homepage": "https://github.com/ROCm/rocm-libraries",
+    "Artifactory": [
+      {
+        "Artifact": "hipdnn",
+        "Artifact_Gfxarch": "False",
+        "Artifact_Subdir": [
+          {
+            "Name": "hipDNN",
+            "Components": [
+              "test"
+            ]
+          }
+        ]
+      },
+      {
+        "Artifact": "miopen",
+        "Artifact_Subdir": [
+          {
+            "Name": "MIOpen",
+            "Components": [
+              "test"
+            ]
+          }
+        ]
+      }
+    ],
     "Gfxarch": "True"
   },
 
