--- a/math-libs/BLAS/artifact-blas.toml
+++ b/math-libs/BLAS/artifact-blas.toml
@@ -23,6 +23,9 @@ optional = true
 [components.dbg."math-libs/BLAS/origami/stage"]
 [components.dev."math-libs/BLAS/origami/stage"]
 [components.lib."math-libs/BLAS/origami/stage"]
+include = [
+  "lib/**",
+]
 [components.test."math-libs/BLAS/origami/stage"]
 include = [
   "bin/origami-tests*",
