Add support for openmpi artifacts
Add artifact-openmpi.toml, update BUILD_TOPOLOGY.toml to include openmpi
artifacts and update openmpi/CMakeLists.txt to call therock_provide_artifact.

--- a/BUILD_TOPOLOGY.toml
+++ b/BUILD_TOPOLOGY.toml
@@ -411,6 +411,12 @@ type = "target-neutral"
 artifact_deps = []
 feature_group = "CORE"
 
+[artifacts.openmpi]
+artifact_group = "third-party-libs"
+type = "target-neutral"
+artifact_deps = []
+feature_group = "CORE"
+
 # --- Base Infrastructure ---
 
 [artifacts.base]
