Add new workflow to support jax branches and python support (#2999)
## Motivation

Refactors the JAX wheels CI to use a matrix (Python version × JAX
branch), align with the PyTorch wheels pattern, and fix paths: rocm-jax
at `rocm-jax/`, JAX source at `jax/`, wheel output at
`rocm-jax/jax_rocm_plugin/wheelhouse`. Updates the default JAX branch
from **rocm-jaxlib-v0.8.0** to **rocm-jaxlib-v0.8.2**.

## Changes

- **release_portable_linux_jax_wheels.yml** (new): Matrix orchestrator
with `python_version: ["3.12"]` and `jax_ref: ["rocm-jaxlib-v0.8.2"]`.
Calls `build_linux_jax_wheels.yml` per combination; no defaults in
`with:`.
- **build_linux_jax_wheels.yml**: Added `jax_ref` input (default
`rocm-jaxlib-v0.8.2`). Checkouts: rocm-jax and JAX at `path: rocm-jax`
and `path: jax`; refs use `inputs.jax_ref` (with fallback). Build uses
`--jax-source-dir="${{ github.workspace }}/jax"`. `PACKAGE_DIST_DIR` set
to `rocm-jax/jax_rocm_plugin/wheelhouse`.
- **test_linux_jax_wheels.yml**: rocm-jax at `rocm-jax`, tests at
`rocm-jax/jax_tests`; refs use `inputs.jax_ref || 'rocm-jaxlib-v0.8.2'`.
- **release_portable_linux_packages.yml**: Triggers
`release_portable_linux_jax_wheels.yml` instead of the build workflow.

## Flow

`release_portable_linux_packages.yml` →
`release_portable_linux_jax_wheels.yml` (matrix) →
`build_linux_jax_wheels.yml` → `test_linux_jax_wheels.yml`.

## Test Plan

Manipulate the input of workflow dispatch to trigger a test job in order
to test the yml workflow

## Test Result

passsing test: https://github.com/ROCm/TheRock/actions/runs/22120125752

## Submission Checklist

- [x] Look over the contributing guidelines at
https://github.com/ROCm/ROCm/blob/develop/CONTRIBUTING.md#pull-requests.

---------

Co-authored-by: Jenkins <jenkins-compute@amd.com>

--- a/.github/workflows/test_linux_jax_wheels.yml
+++ b/.github/workflows/test_linux_jax_wheels.yml
@@ -32,7 +32,7 @@ on:
         description: rocm-jax repository ref/branch to check out
         required: false
         type: string
-        default: "rocm-jaxlib-v0.8.0-fixdevtar"
+        default: "rocm-jaxlib-v0.8.2"
       jax_version:
         description: "Base JAX version (e.g. 0.8.0) for installing jax from PyPI. Extracted from built wheels by write_jax_versions.py."
         required: false
@@ -92,7 +92,7 @@ on:
         description: rocm-jax repository ref/branch to check out
         required: false
         type: string
-        default: "rocm-jaxlib-v0.8.0-fixdevtar"
+        default: "rocm-jaxlib-v0.8.2"
       jax_version:
         description: "Base JAX version (e.g. 0.8.0). Leave empty to auto-detect from rocm-jax requirements."
         required: false
@@ -152,16 +152,16 @@ jobs:
       - name: Checkout rocm-jax (plugin + build scripts)
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
-          path: jax
-          repository: rocm/rocm-jax
-          ref: ${{ inputs.jax_ref || 'rocm-jaxlib-v0.8.0-fixdevtar' }}
+          path: rocm-jax
+          repository: ROCm/rocm-jax
+          ref: ${{ inputs.jax_ref }}
 
       - name: Checkout JAX extended tests repo
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
-          repository: rocm/jax
-          ref: "rocm-jaxlib-v0.8.0"
-          path: jax/jax_tests
+          path: jax
+          repository: ROCm/jax
+          ref: ${{ inputs.jax_ref }}
 
       - name: Set up Python
         uses: actions/setup-python@a309ff8b426b58ec0e2a45f0f869d46889d02405 # v6.2.0
@@ -206,7 +206,7 @@ jobs:
             pip install packaging
             python build_tools/github_actions/compute_jax_package_version.py \
               --rocm-version "${{ inputs.rocm_version }}" \
-              --jax-requirements jax/build/requirements.txt
+              --jax-requirements rocm-jax/build/requirements.txt
           fi
 
       - name: Install JAX wheels from package index
@@ -223,7 +223,7 @@ jobs:
 
       - name: Run JAX tests
         run: |
-          pytest jax/jax_tests/tests/multi_device_test.py -q --log-cli-level=INFO
-          pytest jax/jax_tests/tests/core_test.py -q --log-cli-level=INFO
-          pytest jax/jax_tests/tests/util_test.py -q --log-cli-level=INFO
-          pytest jax/jax_tests/tests/scipy_stats_test.py -q --log-cli-level=INFO
+          pytest jax/tests/multi_device_test.py -q --log-cli-level=INFO
+          pytest jax/tests/core_test.py -q --log-cli-level=INFO
+          pytest jax/tests/util_test.py -q --log-cli-level=INFO
+          pytest jax/tests/scipy_stats_test.py -q --log-cli-level=INFO
