--- a/media-libs/CMakeLists.txt
+++ b/media-libs/CMakeLists.txt
@@ -20,7 +20,7 @@ if(THEROCK_ENABLE_ROCDECODE AND THEROCK_ENABLE_SYSDEPS_AMD_MESA)
       hip-clr
     BUILD_DEPS
     CMAKE_ARGS
-      -DROCM_PATH=${CMAKE_BINARY_DIR}/dist/rocm
+      -DROCM_PATH=
     INTERFACE_LINK_DIRS
       "lib"
     INSTALL_RPATH_DIRS
@@ -77,7 +77,7 @@ if(THEROCK_ENABLE_ROCJPEG AND THEROCK_ENABLE_SYSDEPS_AMD_MESA)
       hip-clr
     BUILD_DEPS
     CMAKE_ARGS
-      -DROCM_PATH=${CMAKE_BINARY_DIR}/dist/rocm
+      -DROCM_PATH=
     INTERFACE_LINK_DIRS
       "lib"
     INSTALL_RPATH_DIRS
