Package hipblaslt-perf (#3120)
Specify the necessary files to be staged for installation and can be
picked up by TheRock build system for packaging into the hipBLASLt
distribution

---------

Co-authored-by: mahmoodw <wmahmood@amd.com>

--- a/math-libs/BLAS/artifact-blas.toml
+++ b/math-libs/BLAS/artifact-blas.toml
@@ -73,6 +73,9 @@ include = [
   "bin/hipblaslt_gentest.py",
   "bin/hipblaslt_gtest.data",
   "bin/hipblaslt_*.yaml",
+  # hipblaslt-perf and python modules
+  "bin/hipblaslt-perf",
+  "share/hipblaslt/performance/**",
   # Built samples (may want these in a samples component at some point).
   "libexec/hipblaslt-samples/**",
 ]
