--- a/.github/workflows/build_linux_runfile_installer.yml
+++ b/.github/workflows/build_linux_runfile_installer.yml
@@ -53,6 +53,9 @@ jobs:
     runs-on: ubuntu-24.04
     container:
       image: ghcr.io/rocm/therock_build_manylinux_x86_64@sha256:d6ae5712a9c7e8b88281d021e907b312cd8a26295b95690baef3e8dde4805858
+    defaults:
+      run:
+        working-directory: build_tools/packaging/runfile-installer
     env:
       BUILD_IMAGE: ghcr.io/rocm/therock_build_manylinux_x86_64@sha256:d6ae5712a9c7e8b88281d021e907b312cd8a26295b95690baef3e8dde4805858
       ARTIFACT_RUN_ID: ${{ inputs.artifact_run_id || github.run_id }}
@@ -103,9 +106,7 @@ jobs:
       #       --version-suffix ${{ env.ARTIFACT_RUN_ID }}
 
       - name: Run setup-installer.sh
-        run: |
-          pushd build_tools/packaging/runfile-installer/
-          bash setup-installer.sh rocm rocm-archs=gfx110x pull=prereleases pullbuild=7.11 pullrocmver=7.11
+        run: bash setup-installer.sh rocm rocm-archs=gfx110x pull=prereleases pullbuild=7.11 pullrocmver=7.11
       
       - name: Run build-installer.sh
         run: bash build-installer.sh noamdgpu
