Exclude static libraries from dh_strip
Simplify dh_strip exclusions by using a generic pattern (-X.a) to exclude
all static libraries instead of listing specific files. This ensures all
.a files are preserved during the stripping process while enabling Debian
package stripping for other binary types.

--- a/build_tools/packaging/linux/package.json
+++ b/build_tools/packaging/linux/package.json
@@ -175,8 +175,7 @@
       }
     ],
     "Gfxarch": "False",
-    "Disable_RPM_STRIP": "True",
-    "Disable_DEB_STRIP": "True"
+    "Disable_RPM_STRIP": "True"
   },
   {
     "Package": "amdrocm-runtime",
